# JediKnightGalaxies

./: CMakeLists.txt
JKGalaxies/ext_data/weapons/: saber_4_caelum.wpn
codemp/: CMakeLists.txt  openjk.vcxproj  openjk.vcxproj.filters  openjkded.vcxproj
codemp/GLua/: glua_entity.cpp  glua_npc.cpp  glua_player.cpp
codemp/JKG/: Item.h  ItemManager.cpp  ItemManager.h
codemp/JKG/Items/: IAmmoItem.cpp  IAmmoItem.h  IArmorItem.cpp  IArmorItem.h  IClothingItem.cpp  IClothingItem.h  IConsumableItem.cpp  IConsumableItem.h  ICrystalItem.cpp  ICrystalItem.h  IGenericItem.cpp  IGenericItem.h  IWeaponItem.cpp  IWeaponItem.h  ItemInclude.h
codemp/cgame/: CMakeLists.txt  cg_cinematics.cpp  cg_draw.cpp  cg_main.cpp  cg_newDraw.cpp  cg_players.cpp  cg_weaponinit.cpp  cgame.vcxproj  cgame.vcxproj.filters  jkg_cg_items.h  jkg_chatbox.cpp  jkg_hud.cpp  jkg_minimaps.cpp
codemp/client/: cl_cin.cpp  cl_main.cpp
codemp/game/: CMakeLists.txt  JK2_game.vcxproj  JK2_game.vcxproj.filters  animtable.cpp  bg_items.cpp  bg_items.h  bg_local.h  bg_misc.cpp  bg_panimate.cpp  bg_public.h  bg_saberLoad.cpp  bg_vehicleLoad.cpp  bg_weapons_load.cpp  g_ICARUScb.cpp  g_bot.cpp  g_client.cpp  g_cmds.cpp  g_combat.cpp  g_local.h  g_main.cpp  g_spawn.cpp  jkg_items.cpp  jkg_items.h  w_saber.cpp
codemp/libraries/json/: cJSON.c  cJSON.h
codemp/qcommon/: InventoryNetworker.cpp  msg.cpp  q_shared.c  q_shared.h  qcommon.h
codemp/rd-vanilla/: CMakeLists.txt  rd-vanilla.vcxproj
codemp/ui/: CMakeLists.txt  jkg_conversations.cpp  jkg_inventory.cpp  jkg_inventory.h  jkg_partymanager.cpp  jkg_pazaak.cpp  jkg_slice.cpp  ui.vcxproj  ui.vcxproj.filters  ui_atoms.cpp  ui_devicecontext.cpp  ui_devicecontext.h  ui_local.h  ui_main.cpp  ui_saber.cpp  ui_shared.cpp  ui_shared.h
